# group2-kgi-hackaton

./: INTEGRATION-SUCCESS-INSPECTION-DATA.md  README.md  check_column_mismatch.py  check_column_types.py  check_db_structure.py  check_sql_server.py  comprehensive_test.py  debug_mapper.py  docker-compose.yml  get_all_columns.py  get_all_db_columns.py  inspection_data_mapper_new.py  issues#1.md  issues#11.md  issues#2.md  issues#3.md  issues#8.md  note-day1.md  note-day2-add.md  note-day3.md  test_data.csv  test_komtrax.csv  test_mapper.py  test_mapper_complete.py  test_real_insert.py  test_upload_process.py  test_with_types.py  user-story#1.md
backend/: .env.example  Dockerfile  README.md  create_comprehensive_test.py  create_sample_users.py  create_test_duplicate.py  create_test_file.py  debug_parameter_mismatch.py  inspection_data_mapper_clean.py  pyproject.toml  test_column_order.py  test_complete_workflow.py  test_comprehensive_nulls.py  test_comprehensive_upload.xlsx  test_conmas_upload.py  test_detection.py  test_duplicate_fix_direct.py  test_duplicate_mapping.py  test_full_upload.py  test_large_dataset.py  test_metadata.py  test_null_handling.py  test_pdf_upload.py  test_rag_integration.py  test_upload_fix.py  uploads-metadata.json
backend/app/: main.py
backend/app/routes/: auth.py  chat.py  database.py  detection.py  health.py  ollama.py  pdf_embeddings.py  sql_rag.py  system_prompt.py  upload.py  user_management.py
backend/app/utils/: azure_openai_service.py  chat_service.py  enhanced_chat_service.py  metadata.py  (+11 more)
backend/config/: default_system_prompt.txt
(+27 files in other folders)
